[project]
name = "rlassessment"
version = "0.1.0"
description = ""
authors = [
    {name = "eric",email = "erdenebayr.d@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "gymnasium[box2d] (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
